<resources>
    <string name="app_name">Zona Azul</string>
    <string name="term">terminos</string>
    <string name="correo_soporte">softec@gmail.com</string>
    <string name="atribucioniconos">icos atri</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="seguro_que_desea_cerrar_sesion">¿Seguro que deseas cerrar tu sesión?</string>
    <string name="si">SI</string>
    <string name="salir">Salir</string>
    <string name="desea_salir_de_la_aplicacion">¿Seguro que desea cerrar la aplicación?</string>
    <string name="no">NO</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarme</string>
    <string name="todo">logos</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="olvidocontra">¿Olvidó su contraseña?</string>
    <string name="entrar">Entrar</string>
    <string name="registrar_usuario">Registrar Nuevo Usuario</string>
    <string name="nombre_user">Nombre de usuario</string>
    <string name="repita_su_contrase_a">Repita su contraseña</string>
    <string name="ci">Cédula</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="error_al_cerrar_sesion">Error al cerrar sesión</string>
    <string name="dinero">$</string>
    <string name="cargando">Espere...</string>
    <string name="Restauracioncontra">Recuperación de contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="descipcion">iconos</string>
    <string name="correo_enviado">se ha enviado un email</string>
    <string name="algo_salio_mal">Algo salio mal vuelva a intentarlo</string>
    <string name="ingrese_un_correo_valido">Ingrese un email valido</string>
    <string name="contrasenias_invalida">Contraseña invalida</string>
    <string name="correo_incorrecto">El correo ingresado es incorrecto</string>
    <string name="porfavor_verifique_su_email">Por favor verifique su email</string>
    <string name="regresar">Regresar</string>
    <string name="seguro_que_desea_regresar_y_perder_los_cambios_no_guardados">¿Seguro que desea salir y perder todos lo datos no guardados?</string>
    <string name="registro_exitoso">Registro Exitoso</string>
    <string name="hemos_enviado_confirmacion">Le enviamos un email de confirmación</string>
    <string name="email_ya_registrado">Email ya se encuentra registrado</string>
    <string name="error_al_registrar_email">Error al registrar este email</string>
    <string name="llene_todos_los_campos">Llene todos los campos</string>
    <string name="dos_puntos">:</string>
    <string name="nombres">Nombres</string>
    <string name="terminos">asd</string>
    <string name="nombre_de_usuario_igual">Nombre de Usuario igual</string>
    <string name="campo_de_texto_vacio">Campo de texto vacio</string>
    <string name="cambiar_nombres">Cambiar Nombres</string>
    <string name="nuevo_nombre">Nuevo nombre</string>
    <string name="guardar">Guardar</string>
    <string name="cuenta1">asdasd\n</string>
    <string name="cuenta2">123</string>
    <string name="cuenta3">casdas5</string>
    <string name="cuenta4">fewf</string>
    <string name="cuenta5">asdasdf</string>
    <string name="contra_muy_corta">Contraseña muy corta</string>
    <string name="las_contrasenias_ingresadas_no_coinciden">Las contraseñas ingresadas no existen</string>
    <string name="estamos_preparando_todo_por_favor_espere">Un momento</string>
    <string name="aun_no_tienes_una_cuenta">¿Aun no tienes una cuenta?</string>
    <string name="control_zona_azul">Control Zona Azul</string>
    <string name="zona">Zona</string>
    <string name="calle">Calle</string>
    <string name="interseccion1">Interseccion 1</string>
    <string name="interseccion2">Interseccion 2</string>
    <string name="espacios">Espacios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="espacios_disponibles">Espacios disponibles:</string>
    <string name="agregar_transacci_n">Reservar Espacio</string>
    <string name="placa">Placa</string>
    <string name="horas">Horas de reserva</string>
    <string name="liberar">Liberar</string>
    <string name="zonas">Zonas</string>
    <string name="bloqueos">Bloqueos</string>
    <string name="bloqueado">Bloqueado</string>
    <string name="desbloqueado">Desbloqueado</string>
    <string name="prohibido">Prohibido</string>
    <string name="estado_de_puesto">ESTADO DE PUESTO</string>
    <string name="descripcion">Descripcion</string>
    <string name="recaudador">Recaudador</string>
    <string name="buscar">Buscar...</string>
</resources>