<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@android:color/transparent"
    app:cardBackgroundColor="@color/colorFondo"
    app:cardCornerRadius="12dp"
    app:cardElevation="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/descipcion"
                android:src="@drawable/ic_login" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/cambiar_nombres"
                android:textAlignment="center"
                android:textColor="@color/colorTexto"
                android:textStyle="bold|italic" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:focusable="false"
                android:hint="@string/nuevo_nombre"
                android:textColorHint="@color/colorTextHint"
                app:boxStrokeColor="@color/colorprin"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorIconosOpaco"
                app:hintTextColor="@color/colorTextoTitulos"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/colorprin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recuperar_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorTexto" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BRecuperarContraCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_red"
                    android:padding="5dp"
                    android:text="@string/cancelar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/BRecuperarContra"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:padding="5dp"
                    android:text="@string/guardar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>