<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_busqueda"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center_vertical"
    app:cardBackgroundColor="@color/colorCardView"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    app:contentPadding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/colorTabScroll"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_shet_background"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/captura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="3dp"
                        android:src="@drawable/ic_perfil" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorTextoTitulos"
                        android:textSize="22sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/colorBlue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:lines="1"
                    android:text="@string/estado_de_puesto"
                    android:textAlignment="center"
                    android:textColor="@color/colorprin"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <RadioGroup
                    android:id="@+id/RGVeGa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/RBprohibido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_contornos_switch"
                        android:drawablePadding="5dp"
                        android:padding="5dp"
                        android:text="@string/prohibido"
                        android:textColor="@color/colorTextoTitulos"
                        android:theme="@style/CheckBoxStyle" />

                    <RadioButton
                        android:id="@+id/RBbloqueado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/background_contornos_switch"
                        android:drawablePadding="5dp"
                        android:padding="5dp"
                        android:text="@string/bloqueado"
                        android:textColor="@color/colorTextoTitulos"
                        android:theme="@style/CheckBoxStyle" />

                    <RadioButton
                        android:id="@+id/RBdesbloqueado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_contornos_switch"
                        android:drawablePadding="5dp"
                        android:padding="5dp"
                        android:text="@string/desbloqueado"
                        android:textColor="@color/colorTextoTitulos"
                        android:theme="@style/CheckBoxStyle" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:lines="1"
                    android:text="@string/descripcion"
                    android:textAlignment="center"
                    android:textColor="@color/colorprin"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/zona"
                            android:textAlignment="textStart"
                            android:textColor="@color/colorTexto"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_zona"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/colorTexto"
                            android:textSize="12sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:background="@color/colorTextHint" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/calle"
                            android:textAlignment="textStart"
                            android:textColor="@color/colorTexto"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_calle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/colorTexto"
                            android:textSize="12sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:background="@color/colorTextHint" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/recaudador"
                            android:textAlignment="textStart"
                            android:textColor="@color/colorTexto"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_recaudador"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/colorTexto"
                            android:textSize="12sp"
                            android:textStyle="normal" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/colorCardView"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <Button
                    android:id="@+id/Bsalir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:drawableTint="@color/colorWhite"
                    android:padding="5dp"
                    android:text="@string/salir"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintTop_toBottomOf="parent"
                    tools:targetApi="m" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

